# samplerepo

./: .gitignore  Makefile  README.md  pyproject.toml  sample_email.txt
.cursor/rules/: git-logical-commits.mdc
TODO/Agent-c/: 01-layout-shell.md  02-api-helpers.md  03-statements-and-detail.md  04-invoices.md  05-actions-cashflow.md  06-cloud-cost-dashboard.md  README.md
backend/: README.md  generate_data.py  pyproject.toml
backend/src/: check_email.py
backend/src/hackathon_backend/: main.py
backend/src/hackathon_backend/agents/: __init__.py  cashflow_actions.py  cloud_summary.py  communications.py  cursor_llm.py  data_source.py  email_inbox.py  invoice_verifier.py  ledger.py  seeds.py  specter.py
backend/src/hackathon_backend/fixtures/: loaders.py
backend/src/hackathon_backend/fixtures/data/: accounts.json  aws_breakdowns.json  gcp_breakdowns.json  gmail_threads.json  invoices.json  transactions.json  vendors.json  whatsapp_threads.json
backend/src/hackathon_backend/fixtures/raw_data/: bank_transactions.json  cloud_usage.json  emails.json
demo/: README.md
frontend/: .env.example  README.md  index.html  package.json
frontend/src/: App.css  App.jsx  DashboardShell.css  DashboardShell.jsx  Landing.css  Landing.jsx  api.js  index.css
frontend/src/components/: AccountProductScope.jsx  ActionsAndCashflow.jsx  (+11 more)
scripts/: _render_email_draft.py  demo.sh  inject_txn.py
services/: cursor_invoke.mjs  package-lock.json  package.json
specs/: 00-track-pivot.md  01-mvp-split.md  README.md  agent-a-mock-data.md  agent-b-backend.md  agent-c-frontend.md
