[project]
name = "hackathon"
version = "0.1.0"
description = "Hackathon API — pivot-friendly stub"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "mypy>=1.20.2",
    "ruff>=0.15.12",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/hackathon_backend"]
